--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,15 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  height: 100vh;
+  background-position: center center;
+  background-size: contain;
+  background-repeat: no-repeat;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
+  align-items: flex-end;
+  font-size: 72px;
+  font-weight: bold;
+  padding-bottom: 4rem;
+  box-sizing: border-box;
+  color: #fff;
+  text-shadow: 0rem 0rem 0.75rem #000;;
 }
